# zLSP

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  mypy.ini  pyproject.toml  test_typehint_override.zolo  test_whitespace.zolo
Documentation/: ARCHITECTURE.md  Architecture_GUIDE.md  CLI_GUIDE.md  COLOR_LEDGER.md  Editors_GUIDE.md  FILE_TYPES.md  Grammar_GUIDE.md  INSTALLATION.md  INSTALLER_CLEANUP_FIX.md  Installation_GUIDE.md  PRISM_PATTERN_ORDER_FIX.md  Philosophy_GUIDE.md  Prism_GUIDE.md  README.md  TYPE_HINT_PAREN_FIX.md  Themes_GUIDE.md  zLSP_Philosophy.md
bifrost-prism/: README.md  prism-zconfig.js  prism-zschema.js  prism-zui.js
examples/: advanced.zolo  basic.zolo  check_tokens.py  emoji_accessibility_test.zolo
examples/zSpecial/: zConfig.machine.zolo  zEnv.example.zolo  zSchema.test_actions.zolo  zSpark.example.zolo  zTest.py  zUI.example.zolo  zUI.lists.zolo  zUI.texts.zolo
tests/: README.md  conftest.py
tests/browser/: test_all_languages.html
tests/e2e/: test_lsp_server_lifecycle.py
tests/integration/: test_code_actions_lsp.py  test_lsp_protocol.py  test_prism_patterns.py  test_semantic_token_snapshots.py  test_special_files.py
tests/integration/golden_tokens/: advanced.zolo.tokens.json  basic.zolo.tokens.json  zConfig.machine.zolo.tokens.json  zEnv.example.zolo.tokens.json  zSchema.example.zolo.tokens.json  zSpark.example.zolo.tokens.json  zUI.example.zolo.tokens.json
tests/unit/: test_bifrost_prism_dir.py  test_block_tracker.py  test_code_action_executor.py  test_code_action_registry.py  test_comment_processors.py  test_completion_registry.py  test_diagnostic_formatter.py  test_diagnostics_engine.py  test_documentation_registry.py  test_error_formatter.py  test_escaped_comma.py  test_field_validators.py  test_file_type_detector.py  test_hover_emoji.py  test_hover_renderer.py  test_key_detector.py  test_lsp_server_handlers.py  test_meta_position_validators.py  test_multiline_collectors.py  test_parser.py  test_parser_api.py  test_prism_generator.py  test_semantic_tokenizer.py  test_serializer.py  test_token_emitters.py  test_type_hints.py  test_validators.py  test_value_validators.py  test_vscode_generator.py
zlsp/: __init__.py  lsp_types.py  token_registry.py  token_types.py  version.py
zlsp/assets/: generate_icon_tints.py
zlsp/cli/: __init__.py  __main__.py  argument_parser.py  cli_facade.py  health_check.py  info_display.py  prism_generator.py  server_runner.py  test_runner.py
zlsp/editors/: README.md  __init__.py
zlsp/editors/_shared/: __init__.py  vscode_base.py
zlsp/editors/cursor/: README.md  __init__.py  install.py  uninstall.py
zlsp/editors/vim/: README.md  install.py  uninstall.py
zlsp/editors/vscode/: MARKETPLACE.md  README.md  __init__.py  install.py  uninstall.py
zlsp/generators/: ARCHITECTURE.md  CLI_USAGE.md  README.md  SSOT_PRISM_GENERATION.md  __init__.py  file_type_pattern_extractor.py  generate_prism_zolo.py  prism_pattern_generator.py  prism_pattern_transformer.py  value_pattern_generator.py
zlsp/parser/: __init__.py  constants.py  parser.py  parser_service.py
zlsp/parser/basic/: __init__.py  block_tracker.py  comment_processors.py  error_formatter.py  escape_processors.py  serializer.py  type_hints.py  validators.py  value_processors.py
zlsp/parser/core/: __init__.py  key_value_parser.py  token_emitter.py  value_emitters.py
zlsp/parser/zvaf/: __init__.py  block_manager.py  file_type_detector.py  key_detector.py  key_value_wrapper.py  modifier_handler.py  multiline_detection.py  ui_shortcuts.py  value_validator_callback.py  value_validators.py  zvaf_parser.py
zlsp/providers/: __init__.py
zlsp/providers/basic/: __init__.py  basic_completion_provider.py
zlsp/providers/completion/: __init__.py  completion_provider.py  completion_router.py  registry.py
zlsp/providers/diagnostics/: __init__.py  diagnostic_provider.py  field_validators.py  formatter.py  menu_validators.py  meta_position_validators.py  (+1 more)
zlsp/server/: code_actions.py  lsp_server.py  semantic_tokenizer.py
zlsp/themes/: __init__.py  zolo_default.yaml
(+36 files in other folders)
